<resources>
    <string name="app_name">Worktime</string>
    <string name="set_regexp_string">Set regexp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="averageListing_str">Average</string>
    <string name="todayListing_str">Today</string>
    <string name="previous_30_days_str">Previous 30 days:</string>
    <string name="previous_90_days_str">Previous 90 days:</string>
    <string name="previous_7_days_str">Previous 7 days:</string>
    <string name="swipe_info_str">Swipe right to edit, swipe left for info.</string>
    <string name="dialog_text">Sorry, the app crashed. Please send report to the developers.</string>
    <string name="dialog_comment">You can add comment here:</string>
    <string name="legal_str">This application comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL verion 3 or later.
                 See www.gnu.org/licenses/gpl.html and github.com/pafinde/Worktime .</string>
</resources>
