<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/todayText"
        android:layout_width="154dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/todayListing_str"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/averageText"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/averageListing_str"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayTicker" />

    <TextView
        android:id="@+id/average7text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous_7_days_str"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageText" />

    <TextView
        android:id="@+id/average30Text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous_30_days_str"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average7text" />

    <TextView
        android:id="@+id/average90Text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous_90_days_str"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average30Text" />

    <TextView
        android:id="@+id/average30Data"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/average30Text"
        app:layout_constraintStart_toEndOf="@+id/average30Text" />

    <TextView
        android:id="@+id/average90Data"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/average90Text"
        app:layout_constraintStart_toEndOf="@+id/average90Text" />

    <TextView
        android:id="@+id/average7Data"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/average7text"
        app:layout_constraintStart_toEndOf="@+id/average7text" />

    <TextView
        android:id="@+id/todayTicker"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="changeSSID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_change_ssid" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_action_refresh" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="edit"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_edit_entries" />

</android.support.constraint.ConstraintLayout>